# DeepEval

./: .env.example  .gitignore  .ignore  CLAUDE.md  GEMINI.md  Makefile  README.md  briefing.md  pyproject.toml  tech_stack.md
.claude/: settings.json
.deepeval/: .deepeval_telemetry.txt
.gemini/commands/: speckit.converge.toml  speckit.taskstoissues.toml
.opencode/commands/: speckit.tasks.md
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  codex.manifest.json  copilot.manifest.json  gemini.manifest.json  opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
.specify/workflows/: workflow-registry.json
config/: bots.yaml  personas.yaml  settings.yaml
deepeval/config/: __init__.py  config_manager.py
deepeval/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  openai_provider.py  openrouter_provider.py
deepeval/observability/: __init__.py  langfuse_client.py
deepeval/repositories/: __init__.py  evaluation_repository.py  models.py  trace_repository.py
deepeval/vector_store/: __init__.py  qdrant_provider.py
deepeval_platform/collection/: extractor_base.py  trace_collector.py  trace_filter.py
deepeval_platform/config/: __init__.py  config_manager.py
deepeval_platform/evaluation/: bot_metric_config_resolver.py  bot_type.py  errors.py  evaluation_config.py  evaluation_context.py  evaluation_orchestrator.py  evaluator.py  (+5 more)
migrations/: 002_synthetic_datasets.sql
tests/: conftest.py
(+253 files in other folders)
