[project]
name = "deepeval-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepeval>=4.0.6",
    "langchain>=1.3.10,<2.0.0",
    "langchain-anthropic>=1.4.8",
    "langchain-openai>=1.3.3",
    "langchain-openrouter>=0.2",
    "langchain-qdrant>=1.1.0",
    "langfuse>=4.13.0",
    "langgraph>=1.2.6,<2.0.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "supabase>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=deepeval --cov-report=term-missing --cov-fail-under=80 -p no:deepeval"
